Add functionality for users to create booikngs
